# claude-autoresumer

./: README.md  pyproject.toml
claude_autoresumer/: cli.py  daemon.py  models.py  notify.py  probe.py  queue.py  sandbox.py  workflow.py
claude_autoresumer/skills/: claude-autoresumer.md
claude_bridge/: cli.py  workflow.py
skills/: claude-autoresumer.md
tests/: conftest.py  test_cli.py  test_daemon.py  test_models.py  test_notify.py  test_probe.py  test_queue.py  test_sandbox.py  test_workflow.py
