[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-autoresumer"
version = "0.1.0"
description = "Queue and run Claude Code jobs overnight, unattended"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
]

[project.scripts]
claude-autoresumer = "claude_autoresumer.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["claude_autoresumer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
